1차초안 완료

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Language Translator | CodingNepal</title>
+    <title>유니패스 통관 진행현황 조회</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font Awesome CDN Link for Icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
   </head>
   <body>
@@ -38,6 +40,6 @@
       </div>
       <button>통관 진행현황 조회</button>
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
